--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,11 @@ file(GLOB_RECURSE SOURCES *.cc)
 
 add_executable("${PROJECT_NAME}" "${SOURCES}")
 
+if (NOT WIN32)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -Wall -Wextra -pedantic")
+  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb -O0")
+endif()
+
 include_directories(../include/)
 
 find_path(SQLITE3_INCLUDE sqlite3.h)
